[package]
name = "slkvs"
version = "0.0.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'

[dependencies]
wit-bindgen = { version = "0.26.0", default-features = false, features = ["realloc"] }
serde = "*"
serde_json = "*"

[package.metadata.component.target]
path = "wit"

